[package]
name = "ffsvm"
description="A libSVM compatible support vector machine, but up to 10x faster, for games or VR."
version = "0.8.0"
repository = "https://github.com/ralfbiedert/ffsvm-rust"
authors = ["Ralf Biedert <rb@xr.io>"]
readme = "README.md"
categories = ["science", "algorithms"]
keywords = ["svm", "libsvm", "machine-learning"]
license = "MIT"
edition = "2018"
exclude = [
    "docs/*",
]

[badges]
travis-ci = { repository = "ralfbiedert/ffsvm-rust" }
maintenance = { status = "experimental" }

[lib]
name = "ffsvm"
path = "src/lib.rs"
crate-type = [ "rlib" ]

[dependencies]
simd_aligned = "0.1.3"
packed_simd = "0.3"

[dev-dependencies]
rand = "0.6"

[profile.release]
opt-level = 3
lto = true
