[package]
name = "ffsvm"
description="A libSVM compatible support vector machine, but up to 10x faster, for games or VR."
version = "0.9.0"
repository = "https://github.com/ralfbiedert/ffsvm-rust"
authors = ["Ralf Biedert <rb@xr.io>"]
readme = "README.md"
categories = ["science", "algorithms"]
keywords = ["svm", "libsvm", "machine-learning"]
license = "MIT"
edition = "2018"
exclude = [
    "docs/*",
]

[badges]
maintenance = { status = "experimental" }

[lib]
name = "ffsvm"
path = "src/lib.rs"
crate-type = [ "rlib" ]

[dependencies]
simd_aligned = "0.4"
#simd_aligned = { path = "../simd_aligned_rust" }

[dev-dependencies]
rand = "0.6"

[profile.release]
opt-level = 3
lto = true
